--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource-variable/onest": "^5.2.8",
+    "@preline/scrollspy": "^3.1.0",
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.7.13",
     "tailwindcss": "^4.1.7"
